# homebase

./: README.md
backend/: Cargo.toml  config.toml  justfile
backend/src/: defaults.rs  errors.rs  lib.rs  main.rs  models.rs
backend/src/api/: background.rs  bookmarks.rs  history.rs  mod.rs  quicklinks.rs  quickmarks.rs  reading_list.rs  run_command.rs  shortcuts.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs  quicklinks.sqlite  reading_list.sqlite  shortcuts.sqlite
backend/src/models/: background.rs  bookmark.rs  commands.rs  file_settings.rs  history_item.rs  mod.rs  quickmark.rs
backend/src/models/quicklink/: mod.rs  prelude.rs  quicklink.rs
backend/src/models/reading_list/: mod.rs  prelude.rs  reading_list.rs
backend/src/models/shortcuts/: commands.rs  mod.rs  prelude.rs  shortcut.rs  urls.rs
backend/src/services/: bookmarks.rs  history.rs  mod.rs  quicklinks.rs  quickmarks.rs  reading_list.rs  run_command.rs  shortcuts.rs
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/lib/stores/: bookmarks.ts
frontend/src/routes/: +page.svelte
frontend_svelte/: index.html  package-lock.json  package.json
frontend_svelte/src/: App.svelte
