[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6"
sea-orm = { version = "0.12.2", features = ["sqlx-sqlite", "runtime-tokio-rustls"]}
rusqlite = "0.29.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.10.0"
log = "0.4"
toml = "0.7.6"
nix = "0.26.2"
cstr = "0.2.11"
execute = "0.2.12"
